Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: resansible-service
  namespace: resansible
spec:
  type: NodePort
  selector:
    app: resansible
  ports:
  - protocol: TCP
    port: 2222
    targetPort: 22
